--- a/PI-Countries-main/clientt/src/views/Home.module.css
+++ b/PI-Countries-main/clientt/src/views/Home.module.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 100%;
-  margin-top: 95px;
+  margin-top: 92px;
   padding: 0;
   text-align: center; 
-margin-bottom: 0;
-}
+
+  /* background-image: linear-gradient(-20deg, #b721ff 0%, #5fdcf8 100%); */
+  background-image: linear-gradient(-225deg, #4E6842 0%, #50A7C2 100%);}
