--- a/PI-Countries-main/clientt/src/views/Landing.module.css
+++ b/PI-Countries-main/clientt/src/views/Landing.module.css
@@ -3,26 +3,37 @@
   font-family: "Yaldevi", sans-serif;
   margin: 0;
 }
- 
+
+ .imagen{
+  background-image: url("../tierra\ \(2\).png"); 
+  background-position: center; 
+  position: absolute;
+  width: 100%; 
+  height: 500px;
+  top: 30%;
+  /* background-size: 500px 550px; */
+  background-repeat: no-repeat; 
+  
+} 
+
 .container {
-  width: 100%;
-  height: 100vh;
-  /* background: linear-gradient(
-    #cb997e,
-      rgba(68, 101, 73, 0.562)
-    ),
-    url("../media/landing1.jpg") no-repeat; */
+   width: 100%;
+  /* height: 11vh;  */
+
   background-position: center;
-  background-size: cover;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
   text-align: center; 
+  /* background-image: url("../tierra\ \(1\).png") ; 
+  position: relative; */
 }
+
 
 .title h1 {
   font-family: 'monospace', sans-serif;
   color: #fff;
   line-height: 100px; 
   font-size: 4.5em;
-  margin-top: 20px;
   margin-bottom: 60px;
   padding: 80px 30px 10px 40px;
   text-transform: uppercase; 
@@ -56,11 +67,11 @@
   border: none;
   color: white;
   padding: 15px 32px;
-  margin-top: 20px;
+  margin-top: 100px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 36px;
   box-shadow: 12px -8px #b7b7a4;
   transition-duration: 0.4s;
   cursor: pointer;
